# jtheme

./: .gitignore  GIT_INTEGRATION.md  MANIFEST.in  README.md  example_requirements.txt  preview_dashboard.html  pyproject.toml  setup.py
.github/worflows/: release.yaml
.github/workflows/: ci.yaml
janus_theme/static/css/: style.css
janus_theme/templates/: dashboard.html
janus_theme/templates/layouts/: base.html
src/janus_theme/: apps.py
src/janus_theme/templates/: login.html
