[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "janus_theme"
dynamic = ["version"]
description = "A professional Enterprise Django theme."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Luca", email = "luca.lusvarghi@strikedataintelligence.it" }]
url = "https://github.com/strikedata/jtheme"
requires-python = ">=3.13"
dependencies = ["Django>=3.0"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"